More minor fixes re buttons getting clipped and making dates appear in the same format everywhere

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -23,8 +23,20 @@
   gap: 8px;
 }
 
-.v-card-actions .v-btn {
+.v-card-actions .v-btn:not(.v-btn--icon) {
   max-width: 100%;
   height: auto;
   white-space: normal;
+}
+
+.v-card-text .v-btn:not(.v-btn--icon) {
+  max-width: 100%;
+  height: auto;
+  white-space: normal;
+}
+
+.v-card-title {
+  white-space: normal;
+  height: auto;
+  line-height: 1.4;
 }
